<resources>
    <string name="api_key">9ac52a0c08950f76d0e5d8941b497512</string>

    <string name="app_name">FILM-O-PHILE</string>
    <string name="plot_synopsis_title">Plot Synopsis</string>
    <string name="transition_name">poster_transition</string>
    <string name="movie_poster_description">Movie Poster</string>
    <string name="movie_backdrop_description">Movie Backdrop</string>
    <string name="sort_description">Sort</string>
    <string name="sort_by_popularity_description">Sort by Popularity</string>
    <string name="sort_by_rating_description">Sort by Rating</string>
    <string name="favourites_title">Favourites</string>
    <string name="trailers_title">Trailers</string>
    <string name="reviews_title">Reviews</string>
    <string name="review_not_available_text">No Reviews for this Movie yet.</string>
    <string name="no_favs_text">You don\'t have any Favourites</string>
</resources>
