<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_menu_sort"
        android:title="@string/sort_description"
        app:showAsAction="always">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menuSortPopular"
                    android:checked="false"
                    android:icon="@drawable/ic_sort_popularity"
                    android:title="@string/sort_by_popularity_description" />
                <item
                    android:id="@+id/menuSortRating"
                    android:checked="false"
                    android:icon="@drawable/ic_sort_rating"
                    android:title="@string/sort_by_rating_description" />
                <item
                    android:icon="@drawable/ic_favorite_heart"
                    android:id="@+id/menuFavourite"
                    android:checked="false"
                    android:title="@string/favourites_title" />
            </group>
        </menu>
    </item>
</menu>