<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/movie_backdrop"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/movie_backdrop_description"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/overlay_scrim" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:contentInsetEnd="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetRight="0dp"
                android:contentInsetStart="0dp"
                android:textAlignment="viewStart"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

                    <com.sackcentury.shinebuttonlib.ShineButton
                        android:layout_centerInParent="true"
                        android:id="@+id/favouriteButton"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end|center_vertical"
                        android:layout_margin="12dp"
                        android:backgroundTint="@android:color/white"
                        android:elevation="20dp"
                        app:allow_random_color="false"
                        app:big_shine_color="#FF6666"
                        app:click_animation_duration="200"
                        app:enable_flashing="true"
                        app:shine_animation_duration="1500"
                        app:shine_count="8"
                        app:shine_distance_multiple="1.5"
                        app:shine_turn_angle="10"
                        app:small_shine_color="#CC9999"
                        app:small_shine_offset_angle="20" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <ImageView
                    android:id="@+id/poster_image_detail"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_poster_description"
                    android:elevation="40dp"
                    android:transitionName="@string/transition_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.011"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_title_drawable"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical|start"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/poster_image_detail"
                    app:layout_constraintTop_toTopOf="@+id/poster_image_detail" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_date_drawable"
                    android:gravity="center_vertical|start"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/titleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

                <TextView
                    android:id="@+id/voteTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_star_drawable"
                    android:gravity="center_vertical|start"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/dateTextView"
                    app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

                <TextView
                    android:id="@+id/voteCountTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_thumbs_drawable"
                    android:gravity="center_vertical|start"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/voteTextView"
                    app:layout_constraintTop_toBottomOf="@+id/voteTextView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/voteCountTextView">

                    <TextView
                        android:id="@+id/plotSynopsisTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/font_gaegu"
                        android:text="@string/plot_synopsis_title"
                        android:textColor="@color/colorAccent"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/plotSynopsisTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/trailerTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/font_gaegu"
                        android:gravity="center"
                        android:text="@string/trailers_title"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/plotSynopsisTextView" />

                    <com.gtomato.android.ui.widget.CarouselView
                        android:id="@+id/trailerCarousel"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"/>

                    <TextView
                        android:id="@+id/reviewTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/font_gaegu"
                        android:gravity="center"
                        android:text="@string/reviews_title"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/plotSynopsisTextView" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/reviewRecyclerView"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

                    <TextView
                        android:gravity="center"
                        android:textAlignment="center"
                        android:id="@+id/reviewPlaceHolder"
                        android:visibility="gone"
                        android:fontFamily="@font/font_gaegu"
                        android:textSize="24sp"
                        android:textColor="@android:color/black"
                        android:text="@string/review_not_available_text"
                        android:layout_margin="16dp"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>